@@ -1,3 +1,7 @@
+* 2014-05-28 - thorben.betten@open-xchange.com
+
+ - Fix for bug 32796: Proper handling of special "*" query during task search
+
 * 2014-05-27 - thorben.betten@open-xchange.com
 
  - Fix for bug 32732: Orderly detect a duplicate lead request
